# GEO-Agent

./: AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: alpha-checklist.md  autonomous-runner.md  context.md  crawl-provider.md  decision-log.md  development-principles.md  entity-profile.md  error-state-taxonomy.md  feedback-log.md  feedback-taxonomy.md  fixture-audit.md  geo-research-integration.md  handoff-decision.md  harness-repair-loop.md  limitations.md  live-adapter-boundary.md  long-run-growth-loop.md  loop-hypotheses.md  loop-review.md  loop-trace.md  loop-v10.md  loop-v12.md  loop-v2.md  loop-v3.md  loop-v4.md  loop-v5.md  loop-v6.md  loop-v7.md  loop-v8.md  loop-v9.md  loop-v9f.md  manual-capture-import.md  next-steps-plan.md  personas.md  product-brief.md  product-contract.md  progress.md  project-evaluation-v4.md  project-evaluation-v5.md  project-evaluation-v6.md  (+29 more)
examples/: acme-fixture.json
schemas/: recorded-dataset.schema.json
tests/: test_alpha_scaffolding.py  test_answer_provider.py  test_artifact_safety.py  test_audit_package_manifest.py  test_audit_runner.py  test_bootstrap_stats.py  test_browser_capture_schema.py  test_citation_absorption.py  test_citation_parser.py  test_claim_fidelity.py  test_cli.py  test_crawl_provider.py  test_crawl_provider_v2.py  test_desktop_dashboard_content.py  test_desktop_diagnosis_task_export_content.py  test_desktop_evidence_source_setup_content.py  test_desktop_project_setup_content.py  test_desktop_query_drilldown_content.py  test_desktop_query_space_review_content.py  (+79 more)
(+93 files in other folders)
